Fixing pull request comments (Tests, query optimization)